8076311: Java 9 process negative MaxTenuringThreshold in different way than Java 8

Corrected processing of invalid MaXTenuringThreshold

Reviewed-by: jmasa, dholmes, kbarrett